--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="pages/jugadas.html">Jugadas</a>
+                                <a class="nav-link" href="pages/Jugadas.html">Jugadas</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="pages/noticias.html">Noticias</a>
