--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../pages/jugadas.html">Jugadas</a>
+                        <a class="nav-link" href="../pages/Jugadas.html">Jugadas</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../pages/noticias.html">Noticias</a>
